# FeatureExtraction

./: README.md  pyproject.toml
src/: coco.py  conf.py  config.yaml  trainer.py
src/evaluation/: compute_homography_estimation.py  compute_repeatability.py
src/models/: classical_detectors.py  keypoints_detector.py
src/weights/magicleap/: inference.py  superpoint.py
